--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "scss": "sass --watch src/styles/_styles.scss src/styles/styles.css"
   },
   "dependencies": {
     "astro": "^5.14.4"
