--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "accessible-astro-components": "^5.0.3",
-    "astro": "^5.14.4"
+    "astro": "^5.14.4",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "sass": "^1.93.2",
