update form validation to astro actions and zod

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "astro": "^5.14.4",
     "marked": "^17.0.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "sass": "^1.93.2",
