--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "scss": "sass --watch src/styles/_styles.scss src/styles/styles.css"
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.1",
     "accessible-astro-components": "^5.0.3",
     "astro": "^5.14.4",
     "marked": "^17.0.1",
